# hermes-voice

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml
deploy/: hermes-voice-autostart.desktop  hermes-voice.desktop  hermes-voice.service
docs/: architecture.md  configuration.md  getting-started.md  index.md  interface.md  operations.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
hermes_voice/: __init__.py  app.py
hermes_voice/static/: app.js  index.html  style.css
overrides/: main.html
tests/: test_app.py
